fix chart overlapping

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -432,6 +432,11 @@ pre {
     background: #f00;
 }
 
+.mchrt-chart {
+    width: 100%;
+    height: 100%;
+}
+
 #loading-slider {
     position: absolute;
     width: 100%;
